# Movie_library

./: CMakeLists.txt  README.md  akcio.cpp  akcio.h  bemenet.txt  csaladi.cpp  csaladi.h  dokumentum.cpp  dokumentum.h  film.cpp  film.h  filmek.txt  lista.cpp  lista.h  main.cpp  string5.cpp  string5.h  teszt-menu.cpp  teszt-menu.h
